--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node server.js",
+    "predeploy": "npm run build",
+    "deploy": "./deploy.sh",
+    "deploy:gh-pages": "npm run build && ./deploy.sh"
   },
   "eslintConfig": {
     "extends": [
